Unit test examples